# TransactionClientServer

./: CMakeLists.txt  ReadMe.md
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  Log.cpp  Log.h  TransactionService.cpp  TransactionService.h  main.cpp
